###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(version = "0.0.1", name = "debugging_py_cpp")
bazel_dep(name = "pybind11_bazel", version = "3.00")

# Examples of how to use pybind11_bazel
# https://github.com/google/re2/tree/e38a588a09495409575df9ec5af55cdb61831bb5
# https://github.com/5l1v3r1/re2/blob/a807e8a3aac2cc33c77b7071efea54fcabe38e0c/MODULE.bazel#L19
# https://github.com/ptr-br/pybind_cpp_w_python_example/blob/d206ead7bd9842a5fc95b20bf3e3b37fd2c0742c/MODULE.bazel#L17

# This is a temporary hack for `x64_x86_windows`.
cc_configure = use_extension("@bazel_tools//tools/cpp:cc_configure.bzl", "cc_configure_extension")
use_repo(cc_configure, "local_config_cc")

bazel_dep(name = "rules_python", version = "1.8.3")
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.10",
    is_default = True,
)

use_repo(python, "python_versions")

# pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
# pip.parse(
#     hub_name = "my_pip",
#     python_version = "3.10",
#     requirements_lock = "//python:requirements.txt",
# )
# use_repo(pip, "my_pip")
