# buildifier: disable=module-docstring
module(name = "debugging_py_cpp")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "bazel_skylib", version = "1.9.0")

bazel_dep(name = "pybind11_bazel", version = "3.0.0")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "pybind11",
    build_file = "@pybind11_bazel//:pybind11-BUILD.bazel",
    strip_prefix = "pybind11-3.0.2",
    integrity = "sha256-43VNFupTa9yWjOFGT6gi4ZihIXiB0xvZvz0of+0rv0w=",
    urls = ["https://github.com/pybind/pybind11/archive/refs/tags/v3.0.2.zip"],
)

# Examples of how to use pybind11_bazel
# https://github.com/google/re2/tree/e38a588a09495409575df9ec5af55cdb61831bb5
# https://github.com/5l1v3r1/re2/blob/a807e8a3aac2cc33c77b7071efea54fcabe38e0c/MODULE.bazel#L19
# https://github.com/ptr-br/pybind_cpp_w_python_example/blob/d206ead7bd9842a5fc95b20bf3e3b37fd2c0742c/MODULE.bazel#L17

# This is a temporary hack for `x64_x86_windows`.
cc_configure = use_extension("@bazel_tools//tools/cpp:cc_configure.bzl", "cc_configure_extension")
use_repo(cc_configure, "local_config_cc")

bazel_dep(name = "rules_python", version = "1.9.0-rc1")
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.14",
    is_default = True,
)

use_repo(python, "python_versions")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.14",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pypi")

bazel_dep(name = "rules_pkg", version = "1.2.0")

# This module sets out to create an installer target for deployment
bazel_dep(name = "rules_rust", version = "0.68.1")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.93.0"],
)

# Swiss army knife of installer tools
bazel_dep(name = "vaticle_bazel_distribution", dev_dependency = True)
git_override(
    module_name = "vaticle_bazel_distribution",
    remote = "https://github.com/typedb/bazel-distribution.git",
    commit = "56b7181d60b3fa275541b6b8d6a41fb84eff79b8",
)

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "7fe1eab26d2b8eeb5e1c6a2f38bddb001e3f9696",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)
# bazel run @hedron_compile_commands//:refresh_all

